# BitTorrent

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  bencode.c  bencode.h  bt_client  bt_client.c  bt_client.c~  bt_library.h  setup.c  setup.c~  setup.h
bt_client/: #Makefile#  Makefile  bencode.c  bt_bencode.c  bt_bencode.h  bt_client  bt_client.c  bt_client.c~  bt_lib.c  bt_lib.h  bt_library.c  bt_library.h  bt_setup.c  hi.c  setup.c  setup.c~  setup.h  setup.h~
bt_devel/: Makefile  README  README.md  bencode.c  bencode.h  bt_client.c  bt_io.c  bt_io.h  bt_lib.c  bt_lib.h  bt_setup.c  bt_setup.h  bt_sock.c  bt_sock.h
bt_samples/: [rutracker.org].t1631649.torrent  [rutracker.org].t1755320.torrent
torrent_samples/: .#mobydick.txt
